# menai

./: .gitignore  AGENTS.md  Makefile  README.md  blueprint.md  pyproject.toml  setup.py
.github/workflows/: build-menai-vm.yml  build-vm.yml
menai_modules/: README.md  json_parser.menai  json_parser_test.menai  math_utils.menai  string_utils.menai
src/menai/: AGENTS.md  README.md  __init__.py  menai.py  menai_ast.py  menai_ast_builder.py  menai_ast_constant_folder.py  menai_ast_dependency_analyzer.py  menai_ast_desugarer.py  menai_ast_module_resolver.py  menai_ast_optimization_pass.py  menai_ast_semantic_analyzer.py  menai_builtin_registry.py  menai_bytecode.py  menai_bytecode_builder.py  menai_bytecode_validator.py  menai_cfg.py  menai_cfg_branch_const_prop.py  menai_cfg_builder.py  menai_cfg_bypass_empty_blocks.py  menai_cfg_collapse_phi_chains.py  menai_cfg_eliminate_dead_blocks.py  menai_cfg_eliminate_trivial_phis.py  menai_cfg_liveness.py  menai_cfg_optimization_pass.py  menai_cfg_optimizer.py  menai_cfg_prune_stale_phi_entries.py  menai_cfg_simplify_blocks.py  menai_cfg_stack_scheduler.py  menai_codegen.py  menai_compiler.py  menai_constant_folder.py  menai_dependency_analyzer.py  menai_desugarer.py  menai_error.py  menai_free_var_analyzer.py  menai_ir.py  menai_ir_addresser.py  menai_ir_builder.py  menai_ir_closure_converter.py  (+81 more)
src/menai_benchmark/: README.md  benchmark.py  run.py
src/menai_checker/: __init__.py
src/menai_disassembler/: disassemble.py
src/menai_pretty_print/: README.md  pretty_print.py
src/menai_profiler/: profile.py
src/menai_test_runner/: menai_test.menai  test_run.py
tests/menai/: conftest.py  test_aifpl_core.py  test_aifpl_evaluator_missing_coverage.py  test_arithmetic.py  test_ast_dependency_analyzer.py  test_bytecode_compatibility.py  test_bytecode_phi_sink.py  test_bytecode_validator.py  test_bytes.py  test_call_stack_edge_cases.py  test_cancellation.py  test_cfg_branch_const_prop.py  test_cfg_collapse_phi_chains.py  test_cfg_optimizer.py  test_cfg_stack_scheduler.py  test_codepoint_conversions.py  test_collections_edge_cases.py  test_comparison_edge_cases.py  test_complex_arithmetic_prelude.py  test_complex_literals.py  test_conditionals.py  test_dependency_analyzer_edge_cases.py  test_desugarer.py  test_dict_higher_order.py  (+71 more)
(+121 files in other folders)
